# cmake_practice

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt
main/include/: echo.h
main/src/: echo.cc  main.cpp
module_a/: CMakeLists.txt  module_a.hpp  module_a_test.cc
module_a/include/: module_a.h
module_a/src/: module_a.cc  module_a_test.cc
module_b/: CMakeLists.txt
module_b/include/: module_b1.h  module_b2.h
module_b/src/: module_b1.cc  module_b1_test.cc  module_b2.cc  module_b2_test.cc
opensource/googletest/: CMakeLists.txt
